figured out relations between all types of pages, added cats page with icons

--- a/index.html
+++ b/index.html
@@ -714,7 +714,7 @@
                     <div class="cd-full-width">
                         <div class="container-fluid js-tm-page-content" data-page-no="2" data-page-type="gallery">
                             <div class="tm-img-gallery-container">
-                                <div class="tm-img-gallery gallery-two">
+                                <div class="tm-img-gallery">
                                 <!-- Gallery Two pop up connected with JS code below -->
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
@@ -732,7 +732,7 @@
                                             <figcaption>
                                                 <h2 class="tm-figure-title"> <span>Cats</span></h2>
                                                 <p class="tm-figure-description">11 pets</p>
-                                                <a href="img/tm-img-11.jpg">View more</a>
+                                                <a href="cats.html">View more</a>
                                             </figcaption>           
                                         </figure>
                                     </div>
