--- a/albert.html
+++ b/albert.html
@@ -62,10 +62,29 @@
                         <div class="container-fluid js-tm-page-content" data-page-no="1" data-page-type="gallery">
                             <div class="tm-img-gallery-container">
                                 <div class="tm-img-gallery gallery-one">
-                                <!-- Gallery One pop up connected with JS code below -->                                    
+                                <!-- Gallery One pop up connected with JS code below -->  
+                                <p ></p>   
+                                <table width="100%">
+                                    <tr>
+                                        <th>header text</th>
+                                        <th>header text</th>
+                                        <th>header text</th>
+                                    </tr>
+                                    <tr>
+                                        <td>text in column</td>
+                                        <td>text in column</td>
+                                        <td>text in column</td>
+                                    </tr>
+                                    <tr>
+                                        <td>text in column</td>
+                                        <td>text in column</td>
+                                        <td>text in column</td>
+                                    </tr>
+                                </table>                  
+                                           
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/albert/01.jpg" alt="Image" class="img-fluid tm-img">
+                                            <img src="img/albert/01_icon.jpg" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
                                                 <p class="tm-figure-description">July 2008</p>
                                                 <a href="img/albert/01.jpg">View more</a>
@@ -74,7 +93,7 @@
                                     </div>
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/albert/02.jpg" alt="Image" class="img-fluid tm-img">
+                                            <img src="img/albert/02_icon.jpg" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
                                                 <p class="tm-figure-description">September 2008</p>
                                                 <a href="img/albert/02.jpg">View more</a>
@@ -83,7 +102,7 @@
                                     </div>
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/albert/03.jpg" alt="Image" class="img-fluid tm-img">
+                                            <img src="img/albert/03_icon.jpg" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
                                                 <p class="tm-figure-description">April 2010</p>
                                                 <a href="img/albert/03.jpg">View more</a>
@@ -92,7 +111,7 @@
                                     </div>
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/albert/04.jpg" alt="Image" class="img-fluid tm-img">
+                                            <img src="img/albert/04_icon.jpg" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
                                                 <p class="tm-figure-description">August 2010</p>
                                                 <a href="img/albert/04.jpg">View more</a>
@@ -101,7 +120,7 @@
                                     </div> 
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/albert/05.jpg" alt="Image" class="img-fluid tm-img">
+                                            <img src="img/albert/05_icon.jpg" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
                                                 <p class="tm-figure-description">December 2011</p>
                                                 <a href="img/albert/05.jpg">View more</a>
@@ -110,7 +129,7 @@
                                     </div>
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/albert/06.jpg" alt="Image" class="img-fluid tm-img">
+                                            <img src="img/albert/06_icon.jpg" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
                                                 <p class="tm-figure-description">August 2012</p>
                                                 <a href="img/albert/06.jpg">View more</a>
@@ -119,7 +138,7 @@
                                     </div>
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/albert/07.jpg" alt="Image" class="img-fluid tm-img">
+                                            <img src="img/albert/07_icon.jpg" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
                                                 <p class="tm-figure-description">July 2017</p>
                                                 <a href="img/albert/07.jpg">View more</a>
