updated species category pages with correct animals

--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                                             <img src="img/icons/cookie.JPG" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
                                                 <h2 class="tm-figure-title"> <span>Cookie</span></h2>
-                                                <p class="tm-figure-description text-lowercase">2006 – 2007</p>
+                                                <p class="tm-figure-description text-lowercase">2006 – 2008</p>
                                                 <a href="albert.html" target="_blank"></a>
                                             </figcaption>           
                                         </figure>
@@ -263,7 +263,7 @@
                                             <img src="img/icons/creampuff.JPG" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
                                                 <h2 class="tm-figure-title"> <span>Creampuff</span></h2>
-                                                <p class="tm-figure-description text-lowercase">2009 – 2010</p>
+                                                <p class="tm-figure-description text-lowercase">2009 – 2011</p>
                                                 <a href="albert.html" target="_blank"></a>
                                             </figcaption>           
                                         </figure>
@@ -313,7 +313,7 @@
                                             <img src="img/icons/fluffy.JPG" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
                                                 <h2 class="tm-figure-title"> <span>Fluffy</span></h2>
-                                                <p class="tm-figure-description text-lowercase">2006 – 2008</p>
+                                                <p class="tm-figure-description text-lowercase">2006 – 2010</p>
                                                 <a href="albert.html" target="_blank"></a>
                                             </figcaption>           
                                         </figure>
@@ -722,7 +722,7 @@
                                             <figcaption>
                                                 <h2 class="tm-figure-title"> <span>Birds</span></h2>
                                                 <p class="tm-figure-description">5 pets</p>
-                                                <a href="img/tm-img-12.jpg">View more</a>
+                                                <a href="birds.html">View more</a>
                                             </figcaption>           
                                         </figure>
                                     </div>
@@ -742,7 +742,7 @@
                                             <figcaption>
                                                 <h2 class="tm-figure-title"> <span>Dogs</span></h2>
                                                 <p class="tm-figure-description">9 pets</p>
-                                                <a href="img/tm-img-10.jpg">View more</a>
+                                                <a href="dogs.html">View more</a>
                                             </figcaption>           
                                         </figure>
                                     </div>
@@ -752,7 +752,7 @@
                                             <figcaption>
                                                 <h2 class="tm-figure-title"> <span>Livestock</span></h2>
                                                 <p class="tm-figure-description">6 pets</p>
-                                                <a href="img/tm-img-09.jpg">View more</a>
+                                                <a href="livestock.html">View more</a>
                                             </figcaption>           
                                         </figure>
                                     </div>
@@ -762,27 +762,18 @@
                                             <figcaption>
                                                 <h2 class="tm-figure-title"> <span>Lizards</span></h2>
                                                 <p class="tm-figure-description">5 pets</p>
-                                                <a href="img/tm-img-08.jpg">View more</a>
+                                                <a href="lizards.html">View more</a>
                                             </figcaption>           
                                         </figure>
                                     </div>
-                                    <div class="grid-item">
-                                        <figure class="effect-bubba">
-                                            <img src="img/icons/stompy.jpg" alt="Image" class="img-fluid tm-img">
-                                            <figcaption>
-                                                <h2 class="tm-figure-title"> <span>Other</span></h2>
-                                                <p class="tm-figure-description">6 pets</p>
-                                                <a href="img/tm-img-07.jpg">View more</a>
-                                            </figcaption>           
-                                        </figure>
-                                    </div>  
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
                                             <img src="img/icons/dexter.jpg" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
                                                 <h2 class="tm-figure-title">Small <span>Mammals</span></h2>
                                                 <p class="tm-figure-description">14 pets</p>
-                                                <a href="img/tm-img-06.jpg">View more</a>
+                                                <a href="small_mammals.html
+                                                ">View more</a>
                                             </figcaption>           
                                         </figure>
                                     </div>  
@@ -792,7 +783,17 @@
                                             <figcaption>
                                                 <h2 class="tm-figure-title"> <span>Snakes</span></h2>
                                                 <p class="tm-figure-description">6 pets</p>
-                                                <a href="img/tm-img-05.jpg">View more</a>
+                                                <a href="snakes.html">View more</a>
+                                            </figcaption>           
+                                        </figure>
+                                    </div>  
+                                    <div class="grid-item">
+                                        <figure class="effect-bubba">
+                                            <img src="img/icons/stompy.jpg" alt="Image" class="img-fluid tm-img">
+                                            <figcaption>
+                                                <h2 class="tm-figure-title"> <span>Other</span></h2>
+                                                <p class="tm-figure-description">6 pets</p>
+                                                <a href="other.html">View more</a>
                                             </figcaption>           
                                         </figure>
                                     </div>  
