added all the images (not in this repository), added another html page

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                                             <figcaption>
                                                 <h2 class="tm-figure-title"> <span>Albino California King Snake</span></h2>
                                                 <p class="tm-figure-description text-lowercase">1990 – 2008</p>
-                                                <a href="albert.html" target="_blank"></a>
+                                                <a href="albino_california_kingsnake.html" target="_blank"></a>
                                             </figcaption>           
                                         </figure>
                                     </div>
